[package]
name = "rust_vaultrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1", features=["macros", "rt"] }
vaultrs = { git="https://github.com/jmgilman/vaultrs" }
# Doesn't contain kv1 => vaultrs = "0.6.2"
